docs/book/samples/ch08/numbers.kso
fn both true true
  true

fn both _ _
  false

fn classify s
  cs = bytes s
  q = number_end cs 1
  digits = slice cs 1 (q - 1)
  floaty = mark_from cs 1 (q - 1)
  if floaty "float64 {to_float digits}" "int {to_int digits}"

fn is_number_char 43
  true

fn is_number_char 45
  true

fn is_number_char 46
  true

fn is_number_char 69
  true

fn is_number_char 101
  true

fn is_number_char none
  false

fn is_number_char c
  both (47 < c) (c < 58)

fn mark_from cs p q
  if (p > q) false (mark_step cs (at cs p) p q)

fn mark_step _ 46 _ _
  true

fn mark_step _ 69 _ _
  true

fn mark_step _ 101 _ _
  true

fn mark_step cs _ p q
  mark_from cs (p + 1) q

fn number_end cs p
  if (is_number_char (at cs p)) (number_end cs (p + 1)) p

pub play =
  print (classify "42")
  >> print (classify "-17")
  >> print (classify "3.25")
  >> print (classify "6e3")
